# Deribit-Storage

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml  ТЗ.md
.github/workflows/: ci.yml
migrations/: env.py
plans/: architecture_plan.md  database_design.md  deribit_client_plan.md  plan.md  project_summary.md
src/: __init__.py
src/core/: __init__.py  config.py  database.py  logging.py
src/core/database/: models.py
src/worker/: __init__.py  models.py
tests/: conftest.py  test_health.py  test_models.py
